unpackaged/main/default/objects/Campaign_Discount__c/Campaign_Discount__c.object-meta.xml
<CustomObject>
    <label>Campaign Discount</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Campaign Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>