unpackaged/main/default/objects/Campaign_Discount__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Discounts</relationshipLabel>
    <relationshipName>Campaign_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>