unpackaged/main/default/objects/Campaign_Discount__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <formula>Campaign_ID__r.Discount_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>