unpackaged/main/default/objects/Campaign_Discount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Category__c</field>
            <operation>equals</operation>
            <value>Product, Module, Application Managed Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaign Discounts</relationshipLabel>
    <relationshipName>Campaign_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>