unpackaged/main/default/objects/Campaign_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_ID__c</columns>
    <columns>Product__c</columns>
    <columns>Minimum_Quantity__c</columns>
    <columns>Maximum_Quantity__c</columns>
    <columns>Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>